# hexlet-git

./: .gitignore  1.py  README.md  accumulator.py  aggregation_2 copy.py  aggregation_2.py  agregation.py  agregation_hidden.py  anonnimous.py  closure.py  coords_distance.py  dictionary_default.py  dictionary_sets.py  excercise.py  flatten.py  flatten_recursive.py  get_hash_tables.py  get_index.py  get_max.py  happ.py  happy_numbers.py  happy_tichet.py  main.py  map_filter.py  map_filter_reduce.py  memoizing.py  middle_point.py  my.session  nearest_location.py  pair.py  partial_function.py  pyproject.toml  rational.py  rational_pair.py  rect.py  rectangle.py  recursion.py  res.csv  session_name.session  stack_lists.py  (+7 more)
Algoritms_basics/: is_prime.py  quick_sort.py
Algoritms_trees/: tree_recursion.py
BeautifulSoup/: 1-soup.py  2-download.py  3-download_local.py  4-extract_tag.py  5-find_all_tags.py  6-sum_books.py  res4.json
CAPCHA/: 1-simple_capcha_sum_articles.py  1-start.py  2-simple_capcha_all_categories_articles.py  3-simple_capcha_all_pages.py  4-text_capcha.py  5-text_capcha_all_pages.py  6-1-voice_to_text.py  6-2_google_capcha.py  6-3_google_capcha.py
Classes/: Count.py  booking.py  exception.py  format.py  getter_setter.py  inherit.py  template.py  truncate.py  url.py  validator.py
Flask/: WEB.py
HomeWorks/: Значения ошибок, возвращаемых проверяющей системой (во всех задачах одинаковые)
INPUT_OUT/: 2.txt  merge.py  often_words.py  out_merge.txt  output.txt  output_file.txt  text2.txt  text3.txt  transform_text.py
Pyrogram/: 1-start.py  (+1 more)
(+396 files in other folders)
